# ezcompute

./: Cargo.toml
examples/: points.rs  test.rs  video.rs
examples/complex/: main.rs  shader.wgsl
examples/compute/: main.rs  shader.wgsl
examples/cube/: main.rs  shader.wgsl
examples/game/: main.rs  per_buddy.wgsl  per_unit.wgsl
examples/game_of_life/: main.rs  update.wgsl
examples/graphing/: function.wgsl  main.rs  path_create.wgsl  path_render.wgsl
examples/gravity_sim/: field.wgsl  main.rs
examples/mandelbrot/: main.rs  shader.wgsl
examples/pathrender/: gc_icons.rs  main.rs  shader.wgsl
examples/plot_points/: main.rs  shader.wgsl
examples/points/: field.wgsl  move.wgsl
examples/quat_rot/: main.rs  shader.wgsl
examples/test/: main.rs  test.wgsl
examples/triangle/: main.rs  shader.wgsl
examples/voxel/: main.rs  shader.wgsl
src/: copy.wgsl  lib.rs
