[package]
name = "ezcompute"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = "3.14.0"
bytemuck = { version = "1.14", features=["derive", "min_const_generics"] }
env_logger = { version = "0.11.0", default-features=false }
pollster = "0.3"
wgpu = "0.19"
winit = { version = "0.29", default-features=false, features=["x11", "rwh_06"] }
x264 = "0.5.0"
mp4 = "0.14.0"
lodepng = "3.10.1"
take_mut = "0.2.2"

[profile.dev]
opt-level=2

[dev-dependencies]
fastrand = "2.0.1"
