[package]
name = "ezcompute"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = "3.16"
bytemuck = { version = "1.16", features=["derive", "min_const_generics"] }
env_logger = { version = "0.11", default-features=false }
pollster = "0.3"
wgpu = "0.20"

winit = { version = "0.30", default-features=false, features=["x11", "rwh_06"], optional = true }
take_mut = { version = "0.2.2", optional = true }

x264 = { version = "0.5.0", optional = true }
mp4 = { version = "0.14.0", optional = true }

lodepng = { version = "3.10.1", optional = true }
vello = { version = "0.1.0", optional = true }

[profile.dev]
opt-level=2

[dev-dependencies]
fastrand = "2.1"
glam = { version = "0.27", features = ["bytemuck"] }
array_ex = "1.0.0"

[features]
default = ["winit"]

winit = ["dep:winit", "dep:take_mut"]
video = ["dep:x264"]
images = ["dep:lodepng"]
vello = ["dep:vello"]

[[example]]
name = "mandelbrot"
required-features = ["images"]

[[example]]
name = "complex"
required-features = ["images"]
